--- a/app/src/main/res/layout/activity_product.xml
+++ b/app/src/main/res/layout/activity_product.xml
@@ -40,6 +40,7 @@
             android:layout_width="50dp"
             android:layout_height="50dp">
             <ImageView
+                android:visibility="gone"
                 android:id="@+id/imgshoppingcartmenu"
                 android:layout_gravity="center_vertical"
                 android:layout_width="50dp"
