--- a/app/src/main/res/drawable/custom_border_menu_gif.xml
+++ b/app/src/main/res/drawable/custom_border_menu_gif.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape android:shape="oval" xmlns:android="http://schemas.android.com/apk/res/android">
+<selector
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <stroke
-        android:width="1dp"
-        android:color="@color/colorBlack"/>
+    <item android:state_pressed="true">
+        <shape android:shape="rectangle">
+            <solid android:color="@color/colorThemeBackroundMenu1"/>
+        </shape>
+    </item>
 
-    <solid android:color="@color/colorWhite"/>
-    <corners android:radius="5dp"/>
-</shape>
+    <item android:drawable="@color/colorThemeBackroundMenu"/>
+</selector>
