--- a/app/src/main/res/layout/activity_bill_detail.xml
+++ b/app/src/main/res/layout/activity_bill_detail.xml
@@ -71,6 +71,7 @@
         android:weightSum="10">
 
         <ScrollView
+            android:scrollbars="none"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="9.3">
