--- a/app/src/main/res/layout/item_order.xml
+++ b/app/src/main/res/layout/item_order.xml
@@ -2,9 +2,8 @@
 <androidx.cardview.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_marginBottom="5dp">
+    android:layout_marginBottom="5dp"
+    android:layout_height="wrap_content">
 
     <LinearLayout
         android:padding="5dp"
@@ -23,7 +22,7 @@
                 android:layout_height="wrap_content">
 
                 <TextView
-                    android:id="@+id/tvsttbillhistory"
+                    android:id="@+id/tvsttorder"
                     android:padding="5dp"
                     android:background="@drawable/custom_border_img"
                     android:text="001"
@@ -33,7 +32,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
                 <TextView
-                    android:id="@+id/tvtencuahangbillhistory"
+                    android:id="@+id/tvtencuahangorder"
                     android:layout_marginLeft="10dp"
                     android:text="Tên cửa hàng"
                     android:textSize="12sp"
@@ -43,7 +42,7 @@
                     android:layout_height="wrap_content"/>
             </LinearLayout>
             <TextView
-                android:id="@+id/tvtrangthaibillhistory"
+                android:id="@+id/tvtrangthaiorder"
                 android:layout_marginTop="5dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -52,7 +51,7 @@
                 android:textStyle="italic"
                 android:textSize="12sp"/>
             <TextView
-                android:id="@+id/tvngaytaobillhistory"
+                android:id="@+id/tvngaytaoorder"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="10sp"
@@ -81,7 +80,7 @@
                 android:layout_height="wrap_content"
                 android:text="Tổng tiền: "/>
             <TextView
-                android:id="@+id/tvtongtienbillhistory"
+                android:id="@+id/tvtongtienorder"
                 android:layout_marginBottom="5dp"
                 android:layout_alignParentRight="true"
                 android:textStyle="bold"
@@ -101,7 +100,7 @@
             android:layout_height="wrap_content">
 
             <Button
-                android:id="@+id/btnchitietbillhistory"
+                android:id="@+id/btnorder"
                 android:background="@drawable/custom_click_btn_chitietbill"
                 android:layout_alignParentRight="true"
                 android:layout_width="100dp"
@@ -109,7 +108,7 @@
                 android:textColor="@color/colorBlack"
                 android:textAllCaps="false"
                 android:textSize="10sp"
-                android:text="Chi tiết"
+                android:text="Order"
                 />
         </RelativeLayout>
     </LinearLayout>
