--- a/app/src/main/res/layout/fragment_newspaper.xml
+++ b/app/src/main/res/layout/fragment_newspaper.xml
@@ -75,7 +75,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="3.5">
+            android:layout_weight="3.4">
 
 
             <androidx.viewpager2.widget.ViewPager2
@@ -90,12 +90,51 @@
             </androidx.viewpager2.widget.ViewPager2>
         </LinearLayout>
         <LinearLayout
+            android:orientation="vertical"
             android:background="@color/colorWhite"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="2">
+            android:layout_weight="2.1">
 
+            <TextView
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="10dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Khuyến mãi của bạn"
+                android:textStyle="bold"
+                android:textSize="12sp"
+                android:textColor="@color/colorBlack"/>
 
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_marginTop="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="100dp">
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:layout_weight="4"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    />
+                <LinearLayout
+                    android:layout_marginTop="20dp"
+                    android:layout_marginBottom="20dp"
+                    android:layout_width="0dp"
+                    android:layout_weight="2"
+                    android:layout_height="match_parent">
+                    <TextView
+                        android:background="@drawable/custom_bg_khuyenmai"
+                        android:paddingTop="20dp"
+                        android:textAlignment="center"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:text="Săn khuyến mãi"
+                        android:textStyle="bold"
+                        android:textSize="12sp"
+                        android:textColor="@color/colorWhite"/>
+                </LinearLayout>
+            </LinearLayout>
         </LinearLayout>
         <LinearLayout
             android:layout_marginBottom="55dp"
